# xfwm4

./: .cdtproject  .cvsignore  .gitignore  .project  AUTHORS  COMPOSITOR  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.ac.in  configure.in  example.gtkrc-2.0  example.xfwm4rc  example.xfwm4rc.in  ltmain.sh  meson.build  meson_options.txt  module.xml  print-version  version  version.sh  xfwm4.spec  xfwm4.spec.in
common/: Makefile.am  Makefile.in  core-c.h  list.h  meson.build  my_intl.h  xfconf-util.c  xfconf-util.h  xfwm-common.c  xfwm-common.h
docs/reference/: .gitignore  Makefile.am  xfwm4-docs.xml
helper-dialog/: Makefile  Makefile.am  Makefile.in  helper-dialog  helper-dialog.c  meson.build
helper-dialog/.deps/: helper-dialog.Po  helper_dialog-helper-dialog.Po
icons/: Makefile.am  Makefile.in  meson.build
icons/128x128/: meson.build
icons/16x16/: meson.build
icons/22x22/: Makefile.am  meson.build
icons/24x24/: Makefile.am
icons/32x32/: Makefile.am
icons/48x48/: Makefile.am  Makefile.in  meson.build
icons/64x64/: Makefile.am
icons/96x96/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in  meson.build
mcs-plugin/: .cvsignore  Makefile.am  Makefile.in  inline-icon.h  keys-icon.h  margins-icon.h  margins.c  margins.h  margins_plugin.c  monitor-icon.h  plugin.c  plugin.h  wmtweak_plugin.c  wmtweaks_plugin.c  workspaces-icon.h  workspaces.c  workspaces.h  workspaces_plugin.c  workspaces_plugin.h  xfce-wm-settings.desktop  xfce-wmtweaks-settings.desktop.in  xfce-workspaces-settings.desktop  xfce-workspaces-settings.desktop.in  xfwm4-icon.h  xfwm4_plugin.c  xfwm4_plugin.h  xfwm4_shortcuteditor.c  xfwm4_shortcuteditor.h
settings-dialogs/: Makefile.am  Makefile.in  common.c  common.h  frap-shortcuts-dialog.c  frap-shortcuts-dialog.h  frap-shortcuts-provider.c  frap-shortcuts-provider.h  frap-shortcuts.c  frap-shortcuts.c.bak  frap-shortcuts.h  meson.build  monitor-icon.h  range-debouncer.c  range-debouncer.h  shortcut-dialog.c  shortcut-dialog.h  tweaks-settings.c  workspace-settings.c  xfce-shortcuts-provider.c  xfce-shortcuts-provider.h  xfce-wm-settings.desktop.in  xfce-wmtweaks-settings.desktop.in  xfce-workspaces-settings.desktop.in  xfwm4-dialog.glade  xfwm4-dialog_glade.h  xfwm4-settings.c  xfwm4-settings.desktop  xfwm4-settings.desktop.in  xfwm4-settings.h  xfwm4-tweaks-dialog.glade  xfwm4-tweaks-dialog_glade.h  xfwm4-tweaks-settings.desktop  xfwm4-tweaks-settings.desktop.in  xfwm4-workspace-dialog.glade  xfwm4-workspace-dialog_glade.h  xfwm4-workspace-settings.desktop  xfwm4-workspace-settings.desktop.in  xfwm4.gresource.xml
src/: .cvsignore  .indent.pro  Makefile.am  Makefile.in  client.c  client.h  compositor.c  compositor.h  cycle.c  cycle.h  debug.h  device.c  device.h  display.c  display.h  event_filter.c  event_filter.h  events.c  events.h  fences.c  fences.h  focus.c  focus.h  frame.c  frame.h  gtk_style.c  gtk_style.h  gtktoxevent.c  gtktoxevent.h  hints.c  hints.h  icons.c  icons.h  inline-default-icon.h  inline-stock-maximize.h  inline-stock-minimize.h  inline-stock-rolldown.h  inline-stock-rollup.h  inline-stock-unmaximize.h  inline-tabwin-icon.h  (+57 more)
themes/: Makefile.am  Makefile.in  meson.build
themes/adept/: Makefile.am  Makefile.in  README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  right-active.xpm  right-inactive.xpm  themerc  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  top-left-active.xpm  top-left-inactive.xpm  top-right-active.xpm  top-right-inactive.xpm
themes/agua/: Makefile.am  Makefile.in  README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-active.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-pressed.xpm  themerc  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  title-5-active.xpm  title-5-inactive.xpm  (+4 more)
themes/atlanta/: Makefile.am  Makefile.in  README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  right-active.xpm  right-inactive.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  themerc  title-1-active.xpm  title-1-inactive.xpm  title-2-active.xpm  title-2-inactive.xpm  title-3-active.xpm  title-3-inactive.xpm  title-4-active.xpm  title-4-inactive.xpm  (+6 more)
themes/atlanta2/: Makefile.am  Makefile.in  README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-active.xpm  bottom-left-inactive.xpm  bottom-right-active.xpm  bottom-right-inactive.xpm  close-active.xpm  close-inactive.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-pressed.xpm  left-active.xpm  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-pressed.xpm  menu-active.xpm  themerc  (+24 more)
(+3730 files in other folders)
