AC_INIT(src/main.c)
AM_INIT_AUTOMAKE(xfwm4, 0.0.100)

AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_INSTALL

AC_C_INLINE
AC_C_CONST

AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h unistd.h)

AC_CHECK_LIB(X11, main,, AC_MSG_ERROR([libX11 is missing from your system: Make sure you have both the  X Window System libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xext, main,, AC_MSG_ERROR([The X Window System installed on this machine does not support the shape extension]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xpm, main,, AC_MSG_ERROR([libXpm is missing from your system: Make sure you have both the Xpm libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)

AC_CHECK_FUNCS(malloc setlocale strchr strdup strrchr strstr)

AC_ARG_ENABLE(debug, [  --enable-debug  	use this option if you want to debug xfwm4], [ AC_DEFINE(DEBUG, 1) ],)

dnl The following is to ensure $prefix is properly expanded
AC_MSG_CHECKING(xfwm4 directory structure)
if test "x$prefix" = "xNONE";
then
  XFWM4_DIR="/usr/local/share/xfwm4"
elif test "x$datadir" = "x\${prefix}/share"
then
  XFWM4_DIR="$prefix/share/xfwm4"
else
  XFWM4_DIR="$datadir/xfwm4"
fi
AC_MSG_RESULT(xfwm4 data dir set to $XFWM4_DIR)
AC_SUBST(XFWM4_DIR)

## Versions of dependencies
GLIB_REQUIRED_VERSION=2.0.0
GTK_REQUIRED_VERSION=2.0.0
PANGO_REQUIRED_VERSION=1.0.0

PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION)

sed -e "s%XFWM4_DIR%$XFWM4_DIR%g" example.xfwm4rc.in > example.xfwm4rc
sed -e "s%XFWM4_DIR%$XFWM4_DIR%g" defaults/defaults.in > defaults/defaults

AC_OUTPUT([
Makefile
src/Makefile
defaults/Makefile
themes/Makefile
themes/agua/Makefile
themes/coldsteel/Makefile
themes/crux/Makefile
themes/cruxish/Makefile
themes/gtk/Makefile
themes/kde/Makefile
themes/linea/Makefile
themes/mofit/Makefile
themes/next/Makefile
themes/oroborus/Makefile
themes/platinum/Makefile
themes/redmond/Makefile
themes/redmondxp/Makefile
themes/slimline/Makefile
themes/trench/Makefile
themes/xfce/Makefile
])
