AC_INIT(src/main.c)

AC_PREREQ(2.52)

VERSION=`date +%y%m%d`
AM_INIT_AUTOMAKE(xfwm4, $VERSION)

AM_CONFIG_HEADER(config.h)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AC_PROG_INSTALL

AC_C_INLINE
AC_C_CONST

AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h unistd.h)

AC_CHECK_LIB(X11, main,, AC_MSG_ERROR([libX11 is missing from your system: Make sure you have both the  X Window System libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xext, main,, AC_MSG_ERROR([The X Window System installed on this machine does not support the shape extension]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xpm, main,, AC_MSG_ERROR([libXpm is missing from your system: Make sure you have both the Xpm libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)

AC_CHECK_FUNCS(malloc setlocale strchr strdup strrchr strstr)

AC_ARG_ENABLE(debug, [  --enable-debug  	use this option if you want to debug xfwm4], [ AC_DEFINE(DEBUG, 1, "debug") ],)

## Versions of dependencies
GLIB_REQUIRED_VERSION=2.0.0
GTK_REQUIRED_VERSION=2.0.0
PANGO_REQUIRED_VERSION=1.0.0

PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION)

AC_OUTPUT([
xfwm4.spec
Makefile
src/Makefile
defaults/Makefile
themes/Makefile
themes/adept/Makefile
themes/agua/Makefile
themes/b5/Makefile
themes/b6/Makefile
themes/bbs/Makefile
themes/coldsteel/Makefile
themes/coolclean/Makefile
themes/crux/Makefile
themes/cruxish/Makefile
themes/curve/Makefile
themes/default.keys/Makefile
themes/eazel-blue/Makefile
themes/exocet/Makefile
themes/g2/Makefile
themes/gorilla/Makefile
themes/gtk/Makefile
themes/iceg/Makefile
themes/kde/Makefile
themes/kindaker/Makefile
themes/linea/Makefile
themes/microgui/Makefile
themes/mofit/Makefile
themes/next/Makefile
themes/ops/Makefile
themes/oroborus/Makefile
themes/piranha/Makefile
themes/platinum/Makefile
themes/quinx/Makefile
themes/r9x/Makefile
themes/redmond/Makefile
themes/redmondxp/Makefile
themes/retro/Makefile
themes/slick/Makefile
themes/slimline/Makefile
themes/tabs/Makefile
themes/trench/Makefile
themes/xfce/Makefile
])
