AC_INIT(src/main.c)

AC_PREREQ(2.52)

VERSION=`date +%y%m%d`
AM_INIT_AUTOMAKE(xfwm4, $VERSION)

AM_CONFIG_HEADER(config.h)

## libtool support (for plugins)
AC_DISABLE_STATIC
AC_PROG_LIBTOOL

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AC_PROG_CC
AC_PROG_INSTALL

AC_C_INLINE
AC_C_CONST

AC_PATH_XTRA
AC_HEADER_STDC
AC_CHECK_HEADERS(stdlib.h string.h unistd.h)

AC_CHECK_LIB(X11, main,, AC_MSG_ERROR([libX11 is missing from your system: Make sure you have both the  X Window System libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xext, main,, AC_MSG_ERROR([The X Window System installed on this machine does not support the shape extension]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)
AC_CHECK_LIB(Xpm, main,, AC_MSG_ERROR([libXpm is missing from your system: Make sure you have both the Xpm libraries and development headers correctly installed]), $X_CFLAGS $X_PRE_LIBS $X_EXTRA_LIBS $X_LIBS)

AC_CHECK_FUNCS(malloc setlocale strchr strdup strrchr strstr)

AC_ARG_ENABLE(debug, [  --enable-debug	use this option if you want to debug xfwm4], [ AC_DEFINE(DEBUG, 1, [Define to 1 for debug.]) ],)

## Versions of dependencies
GLIB_REQUIRED_VERSION=2.0.0
GTK_REQUIRED_VERSION=2.0.0
PANGO_REQUIRED_VERSION=1.0.0
LIBXFCEGUI4_REQUIRED_VERSION=0.0.12
LIBXFCE4MCS_REQUIRED_VERSION=0.0.3

AC_DEFINE_UNQUOTED(GLIB_REQUIRED_VERSION, $GLIB_REQUIRED_VERSION, [Define glib required version.])
AC_DEFINE_UNQUOTED(GTK_REQUIRED_VERSION, $GTK_REQUIRED_VERSION, [Define gtk required version.])
AC_DEFINE_UNQUOTED(PANGO_REQUIRED_VERSION, $PANGO_REQUIRED_VERSION, [Define pango required version.])
AC_DEFINE_UNQUOTED(LIBXFCEGUI4_REQUIRED_VERSION, $LIBXFCEGUI4_REQUIRED_VERSION, [Define libxfcegui4 required version.])
AC_DEFINE_UNQUOTED(LIBXFCE4MCS_REQUIRED_VERSION, $LIBXFCE4MCS_REQUIRED_VERSION, [Define libxfce4mcs required version.])

AC_SUBST(GLIB_REQUIRED_VERSION)
AC_SUBST(GTK_REQUIRED_VERSION)
AC_SUBST(PANGO_REQUIRED_VERSION)
AC_SUBST(LIBXFCEGUI4_REQUIRED_VERSION)
AC_SUBST(LIBXFCE4MCS_REQUIRED_VERSION)

PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION gtk+-2.0 >= $GTK_REQUIRED_VERSION pango >= $PANGO_REQUIRED_VERSION libxfcegui4-1.0 >= $LIBXFCEGUI4_REQUIRED_VERSION)
PKG_CHECK_MODULES(MCS_CLIENT,  libxfce4mcs-client-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
PKG_CHECK_MODULES(MCS_MANAGER, libxfce4mcs-manager-1.0 >= $LIBXFCE4MCS_REQUIRED_VERSION)
PKG_CHECK_MODULES(XFCE_MCS_MANAGER, xfce-mcs-manager = 1)

AC_PATH_PROG(GDK_PIXBUF_CSOURCE, gdk-pixbuf-csource, no)

if test x"$GDK_PIXBUF_CSOURCE" = xno; then
  AC_MSG_ERROR([gdk-pixbuf-csource executable not found in your path - should be installed with GTK])
fi

AC_SUBST(GDK_PIXBUF_CSOURCE)

AC_OUTPUT([
xfwm4.spec
Makefile
src/Makefile
mcs-plugin/Makefile
defaults/Makefile
themes/Makefile
themes/adept/Makefile
themes/agua/Makefile
themes/atlanta/Makefile
themes/atlanta2/Makefile
themes/b5/Makefile
themes/b6/Makefile
themes/bbs/Makefile
themes/beastie/Makefile
themes/biz/Makefile
themes/coldsteel/Makefile
themes/coolclean/Makefile
themes/crux/Makefile
themes/cruxish/Makefile
themes/curve/Makefile
themes/default.keys/Makefile
themes/eazel-blue/Makefile
themes/elberg/Makefile
themes/exocet/Makefile
themes/fbx/Makefile
themes/g2/Makefile
themes/gaudy/Makefile
themes/gnububble/Makefile
themes/gorilla/Makefile
themes/gtk/Makefile
themes/iceg/Makefile
themes/kde/Makefile
themes/keramik/Makefile
themes/kindaker/Makefile
themes/koynacity/Makefile
themes/linea/Makefile
themes/meenee/Makefile
themes/metabox/Makefile
themes/microcurve/Makefile
themes/microdeck/Makefile
themes/microdeck2/Makefile
themes/microgui/Makefile
themes/mofit/Makefile
themes/next/Makefile
themes/ops/Makefile
themes/oroborus/Makefile
themes/pills/Makefile
themes/piranha/Makefile
themes/platinum/Makefile
themes/quiet-purple/Makefile
themes/quinx/Makefile
themes/r9x/Makefile
themes/redmond/Makefile
themes/redmondxp/Makefile
themes/retro/Makefile
themes/silverado/Makefile
themes/slick/Makefile
themes/slimline/Makefile
themes/tabs/Makefile
themes/tgc/Makefile
themes/trench/Makefile
themes/tux/Makefile
themes/variation/Makefile
themes/xfce/Makefile
])
